# Quad-RL

./: .env  .envrc  .gitignore  Makefile  Original_HyRL_Policy.py  README.md  black_output.txt  client.py  drone.proto  drone_pb2.py  drone_pb2_grpc.py  dronecontrol.py  flake.nix  main.py  pyproject.toml  server.py  setup.py  test_client.py
.github/workflows/: build.yml  format.yml
Original_HyRL_Code/: HyRL.py  README.md  plot_policy.py  train_dqn.py
gym-0.21.0/: setup.py
lib/: __init__.py
lib/dronecontrol/: __init__.py
protos/: drone.proto
protos/hyrl_api/: obstacle_avoidance.proto
src/hyrl_api/: drone_grpc.py  drone_pb2.py  hyrl.py  obstacle_avoidance_pb2.py  obstacle_avoidance_pb2.pyi
src/hyrl_server/: drone_grpc.py  drone_pb2.py  hyrl.py
src/rl_policy/: client_sim.py  client_sim_path.py  drone_grpc.py  drone_pb2.py  dronecontrol.py  getDirectionField.py  getDirectionPath.py  getTrajectorySim.py  server.py  train_agent  train_agent.py  training_env.py  training_tools.py
