[project]
name = "rl-policy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "betterproto>=1.2.5",
    "grpcio-tools>=1.71.0",
    "grpcio>=1.71.0",
    "grpclib>=0.4.7",
    "protobuf>=5.29.4",
    "jinja2>=3.1.0", # dependency for betterproto
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["rl_policy"]
