[project]
name = "rl-policy"
version = "0.1.0"
description = "Reinforcement learning policy server for drone navigation"
readme = "README.md"
requires-python = ">=3.9,<3.11"

dependencies = [
  "betterproto>=1.2.5",
  "grpcio-tools>=1.71.0",
  "grpcio>=1.71.0",
  "grpclib>=0.4.7",
  "protobuf>=5.29.4",
  "jinja2>=3.1.0",
  "numpy>=1.26.0",
  "stable-baselines3>=2.0.0",
  "torch>=2.0.0",
  "matplotlib>=3.7.0",
  "gym",
  "scikit-learn>=1.5.0",
  "shimmy>=0.2.1",
  "scipy>=1.13.1",
  "dotenv>=0.9.9",
]

[tool.uv.sources]
gym = { path = "gym-0.21.0" }

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["rl_policy"]

[tool.setuptools.package-data]
"HyRL" = ["models/*"]

[project.optional-dependencies]
dev = ["black>=24.8.0"]

[tool.black]
line-length = 88
target-version = ['py310']
